--- a/src/Assets/css/nav-bar.css
+++ b/src/Assets/css/nav-bar.css
@@ -14,6 +14,7 @@ nav {
     align-items: center;
     padding: 8px var(--primary-padding);
     margin: auto;
+    height: 70px;
 }
 
 .navbar img {
@@ -63,7 +64,7 @@ nav {
     color: #000000;
     text-decoration: none;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 18px;
     border: 0;
     outline: 0;
     cursor: pointer;
