--- a/src/Assets/css/footer.css
+++ b/src/Assets/css/footer.css
@@ -59,13 +59,18 @@ footer {
     margin: 0;
 }
 
-.social-media a {
-    font-size: 45px;
+.social-media-images {
+    display: flex;
+    gap: 16px;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.social-media-images a {
     color: #000000;
 }
 
-.social-media a:hover {
-    font-size: 45px;
+.social-media-images a:hover {
     color: var(--primary);
 }
 
@@ -86,5 +91,9 @@ footer {
 
     .social-media {
         text-align: center;
+    }
+
+    .social-media-images {
+        justify-content: center;
     }
 }
