--- a/src/Assets/css/waiting-list-dialog.css
+++ b/src/Assets/css/waiting-list-dialog.css
@@ -16,7 +16,7 @@
 
 .waiting-list-card {
     max-width: 1200px;
-    max-height: 100%;
+    height: 80vh;
     background-color: white;
     border-radius: 16px;
     display: flex;
@@ -29,13 +29,16 @@
 
 .waiting-list-content {
     width: 50%;
-    padding: 64px 32px 32px;
-    display: grid;
-    gap: 32px;
+    padding: clamp(64px, 10vh, 90px) clamp(32px, 5vw, 64px);
     background: rgba(237, 237, 237, 0.86);
     backdrop-filter: blur(2px rgba(0, 0, 0, 0.8));
     max-height: 100%;
     overflow: hidden auto !important;
+}
+
+.waiting-list-content div {
+    display: grid;
+    gap: 32px;
 }
 
 .waiting-list-content h3 {
@@ -62,6 +65,28 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 32px;
+}
+
+.waiting-list-content label {
+    position: relative;
+}
+
+.waiting-list-content label span {
+    font-size: 16px;
+    position: absolute;
+    top: 16px;
+    left: 2px;
+}
+
+.waiting-list-content label:focus-within span, .waiting-list-content label:has(.has-input) span {
+    font-size: 10px;
+    top: 2px;
+}
+
+.waiting-list-content label input {
+    height: 28px;
+    margin-top: 16px;
+    font-family: 'Maven Pro', sans-serif;
 }
 
 .success {
