--- a/src/Assets/css/waiting-list-dialog.css
+++ b/src/Assets/css/waiting-list-dialog.css
@@ -34,6 +34,9 @@
     backdrop-filter: blur(2px rgba(0, 0, 0, 0.8));
     max-height: 100%;
     overflow: hidden auto !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .waiting-list-content div {
